[metadata]
name = pymilldb
version = 0.0.11
author = Vicente Calisto
author_email = vecalisto@uc.cl
description = A python library for MillenniumDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MillenniumDB/PyMillDB
project_urls =
    Bug Tracker = https://github.com/MillenniumDB/PyMillDB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src